--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -832,7 +832,7 @@
                     Coleslaw
                   </h5>
                   <p>
-                    layers of enriched grain pasta, stuffed with savory, rich taste of meat sauce, topped with creamy melted cheese and chives
+                    chopped raw cabbage, carrots, and onions, with creamy rich mayonnaise
                   </p>
                   <div class="options">
                     <h6>
