--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -532,7 +532,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                  <img src="images/Frenchfriees.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -578,7 +578,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                  <img src="images/TacoSalad1.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -701,7 +701,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                  <img src="images/grilled-meat-veggies-homemade-delight-generated-by-ai_188544-16034.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
