index and photos

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -520,6 +520,7 @@
                             <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296
                          c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
                           </g>
+                          http://127.0.0.1:5500/restaurant/index.html
                         </g>
                       </svg>
                     </a>
@@ -625,7 +626,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                  <img src="images/PrimeRib1.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -825,7 +826,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                  <img src="images/Coleslaw1.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
