--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -1046,12 +1046,27 @@
               </div>
               <div class="img-box">
                 <img src="images/client2.jpg" alt="" class="box-img">
+
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
+                </p>
+                <h6>
+                  Mike Hamell
+                </h6>
+                <p>
+                  magna aliqua
+                </p>
               </div>
+              <div class="img-box">
+                <img src="images/client2.jpg" alt="" class="box-img">
+              </div>
+              
             </div>
           </div>
         </div>
       </div>
     </div>
+    
   </section>
 
   <!-- end client section -->
