--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -73,8 +73,6 @@
               </li>
             </ul>
             <div class="user_option">
-              <a href="" class="User_option.html"user_link">
-                <i class="fa fa-user" aria-hidden="true"></i>
               </a>
               <a class="cart_link" href="#">
                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -319,7 +317,7 @@
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
-                <div class="img-box">
+                <div class="">
                   <img src="images/burger1.PNG" alt="">
                 </div>
                 <div class="detail-box">
@@ -365,7 +363,7 @@
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
-                <div class="img-box">
+                <div class="">
                   <img src="images/BBQ Bacon CHeddar Burger1.jpg" alt="">
                 </div>
                 <div class="detail-box">
@@ -410,7 +408,7 @@
           <div class="col-sm-6 col-lg-4 all salad">
             <div class="box">
               <div>
-                <div class="img-box">
+                <div class="">
                   <img src="images/Salad1.jpg" alt="">
                 </div>
                 <div class="detail-box">
@@ -486,7 +484,7 @@
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
               <div>
-                <div class="img-box">
+                <div class="">
                   <img src="images/Chicken-Alfredo1.jpg" alt="">
                 </div>
                 <div class="detail-box">
@@ -533,7 +531,7 @@
           <div class="col-sm-6 col-lg-4 all sides">
             <div class="box">
               <div>
-                <div class="img-box">
+                <div class="">
                   <img src="images/Frenchfriees.PNG" alt="">
                 </div>
                 <div class="detail-box">
@@ -579,7 +577,7 @@
           <div class="col-sm-6 col-lg-4 all salad">
             <div class="box">
               <div>
-                <div class="img-box">
+                <div class="">
                   <img src="images/TacoSalad1.PNG" alt="">
                 </div>
                 <div class="detail-box">
@@ -626,7 +624,7 @@
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
-                <div class="img-box">
+                <div class="">
                   <img src="images/PrimeRib1.jpg" alt="">
                 </div>
                 <div class="detail-box">
@@ -664,34 +662,6 @@
                         </g>
                         <g>
                         </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
                       </svg>
                     </a>
                   </div>
@@ -702,7 +672,7 @@
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
-                <div class="img-box">
+                <div class="">
                   <img src="images/grilled-meat-veggies-homemade-delight-generated-by-ai_188544-16034.jpg" alt="">
                 </div>
                 <div class="detail-box">
@@ -737,36 +707,6 @@
                             <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296
                          c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
                           </g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
-                        </g>
-                        <g>
                         </g>
                       </svg>
                     </a>
@@ -826,7 +766,7 @@
           <div class="col-sm-6 col-lg-4 all side">
             <div class="box">
               <div>
-                <div class="img-box">
+                <div class="">
                   <img src="images/Coleslaw1.PNG" alt="">
                 </div>
                 <div class="detail-box">
