--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -44,7 +44,7 @@
 
   <div class="hero_area">
     <div class="bg-box">
-      <img src="images/Black.jpg" alt="">
+      <img src="images/hero-bg.jpg" alt="">
     </div>
     <!-- header section strats -->
     <header class="header_section">
