--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -139,8 +139,8 @@
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
-                <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                <div class="">
+                  <img src="" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
