--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -510,7 +510,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Chicken-Alfredo1.jpg" alt="">
+                  <img src="images/Chicken Alfredo1.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
