--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -1042,9 +1042,21 @@
     </div>
   </div>
 </section>
+ <!-- Add another slide (Slide 3) -->
+ <div class="item">
+  <div class="box">
+    <div class="detail-box">
+      <p>Game Day Grill is a culinary touchdown for sports enthusiasts and food lovers alike. From the moment you step inside, the vibrant atmosphere and energetic vibe set the stage for an unforgettable dining experience.</p>
+      <h6>Anthony Marion</h6>
+      <p>Customer</p>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+</div>
+</section>
 <!-- end client section -->
->>>>>>> Stashed changes
-
 
 
   <!-- footer section -->
