in the ending fixed

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -1021,14 +1021,13 @@
           <div class="box">
             <div class="detail-box">
               <p>Game Day Grill has hit it out of the park, offering a dining experience that seamlessly combines the thrill of game day with a culinary adventure that satisfies even the most discerning taste buds.</p>
-              <h6>Luis Castellanos Marroquin
-              </h6>
+              <h6>Luis Castellanos Marroquin</h6>
               <p>Customer</p>
             </div>
           </div>
         </div>
 
-        <!-- Add another slide (Slide 3) -->
+        <!-- Slide 3 -->
         <div class="item">
           <div class="box">
             <div class="detail-box">
@@ -1038,25 +1037,25 @@
             </div>
           </div>
         </div>
+
+        <!-- Slide 4 -->
+        <div class="item">
+          <div class="box">
+            <div class="detail-box">
+              <p>Game Day Grill continues to impress with its winning combination of delicious food, welcoming atmosphere, and top-notch service. It has become my go-to place for enjoying both sports and a fantastic dining experience.</p>
+              <h6>Jennifer Rodriguez</h6>
+              <p>Customer</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
- <!-- Add another slide (Slide 3) -->
- <div class="item">
-  <div class="box">
-    <div class="detail-box">
-      <p>Game Day Grill is a culinary touchdown for sports enthusiasts and food lovers alike. From the moment you step inside, the vibrant atmosphere and energetic vibe set the stage for an unforgettable dining experience.</p>
-      <h6>Anthony Marion</h6>
-      <p>Customer</p>
-    </div>
-  </div>
-</div>
-</div>
-</div>
-</div>
-</section>
+
+
 <!-- end client section -->
+
 
 
   <!-- footer section -->
