--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -1043,7 +1043,7 @@
           <div class="box">
             <div class="detail-box">
               <p>Game Day Grill continues to impress with its winning combination of delicious food, welcoming atmosphere, and top-notch service. It has become my go-to place for enjoying both sports and a fantastic dining experience.</p>
-              <h6>Jennifer Rodriguez</h6>
+              <h6>Srijan Gurung</h6>
               <p>Customer</p>
             </div>
           </div>
