making the second page of the menu

--- a/menu.html
+++ b/menu.html
@@ -872,7 +872,7 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="">
+        <a href="menu2ndpage.html">
           View More
         </a>
       </div>
