--- a/index.html
+++ b/index.html
@@ -506,14 +506,13 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all pasta">
+          <div class="col-sm-6 col-lg-4 all sides">
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Chicken-Alfredo1.jpg" alt="">
+                  <img src="images/Chicken Alfredo1.png" alt="">
                 </div>
                 <div class="detail-box">
-                  <h5>
                     Chicken Alfredo
                   </h5>
                   <p>
