--- a/menu2ndpage.html
+++ b/menu2ndpage.html
@@ -872,8 +872,8 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="">
-          View More
+        <a href="menu.html">
+          Go Back
         </a>
       </div>
     </div>
