--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/f1.png" alt="">
+                  <img src="images/burger1.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
