--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Coleslaw1.PNG" alt="">
+                  <img src="images/Coleslaw1.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
