--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Frenchfriees.PNG" alt="">
+                  <img src="images/Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
