--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <div class="carousel-item">
             <div class="container ">
               <div class="row">
-                <img src="images/o1.jpg" alt="">
+                <img src="images/Placeholder.png" alt="">
                 <div class="col-md-7 col-lg-6 ">
                   <div class="detail-box">
                     <h1>
