--- a/index.html
+++ b/index.html
@@ -117,87 +117,89 @@
         </nav>
       </div>
     </header>
-    <!-- end header section -->
-    <!-- slider section -->
-    <section class="slider_section ">
-      <div id="customCarousel1" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="container ">
-              <div class="row">
-                <div class="col-md-7 col-lg-6 ">
-                  <div class="detail-box">
-                    <h1>
-                      Savor the Flavor!
-                    </h1>
-                    <p>
-                      Indulge in the Juicy Perfection of Our Prime Steaks
-                    </p>
-                    <div class="">
-                      <a href="menu.html" class="btn1">
-                        Order Now
-                      </a>
-                    </div>
-                  </div>
+<!-- end header section -->
+<!-- slider section -->
+<section class="slider_section ">
+  <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="container ">
+          <div class="row">
+            <img src="images/Frenchfriees.png" alt="">
+            <div class="col-md-7 col-lg-6 ">
+              <div class="detail-box">
+                <h1>
+                  Savor the Flavor!
+                </h1>
+                <p>
+                  Indulge in the Juicy Perfection of Our Prime Steaks
+                </p>
+                <div class="">
+                  <a href="menu.html" class="btn1">
+                    Order Now
+                  </a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="carousel-item ">
-            <div class="container ">
-              <div class="row">
-                <div class="col-md-7 col-lg-6 ">
-                  <div class="detail-box">
-                    <h1>
-                      Grill the Season
-                    </h1>
-                    <p>
-                      limited-time availability of these specials
-                    </p>
-                    <div class="btn-box">
-                      <a href="menu.html" class="btn1">
-                        Order Now
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="container ">
-              <div class="row">
-                <img src="images/Placeholder.png" alt="">
-                <div class="col-md-7 col-lg-6 ">
-                  <div class="detail-box">
-                    <h1>
-                      Grill On-Demand
-                    </h1>
-                    <p>
-                      Delicious Grilled Meals Delivered to Your Doorstep in Minutes.
-                    </p>
-                    <div class="btn-box">
-                      <a href="menu.html" class="btn1">
-                        Order Now
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <ol class="carousel-indicators">
-            <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
-            <li data-target="#customCarousel1" data-slide-to="1"></li>
-            <li data-target="#customCarousel1" data-slide-to="2"></li>
-          </ol>
         </div>
       </div>
+      <div class="carousel-item ">
+        <div class="container ">
+          <div class="row">
+            <img src="images/Chicken Alfredo1.png" alt="">
+            <div class="col-md-7 col-lg-6 ">
+              <div class="detail-box">
+                <h1>
+                  Grill the Season
+                </h1>
+                <p>
+                  Limited-time availability of these specials
+                </p>
+                <div class="btn-box">
+                  <a href="menu.html" class="btn1">
+                    Order Now
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container ">
+          <div class="row">
+            <img src="images/BBQ Bacon CHeddar Burger1.jpg" alt="">
+            <div class="col-md-7 col-lg-6 ">
+              <div class="detail-box">
+                <h1>
+                  Grill On-Demand
+                </h1>
+                <p>
+                  Delicious Grilled Meals Delivered to Your Doorstep in Minutes.
+                </p>
+                <div class="btn-box">
+                  <a href="menu.html" class="btn1">
+                    Order Now
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <ol class="carousel-indicators">
+        <li data-target="#customCarousel1" data-slide-to="0" class="active"></li>
+        <li data-target="#customCarousel1" data-slide-to="1"></li>
+        <li data-target="#customCarousel1" data-slide-to="2"></li>
+      </ol>
+    </div>
+  </div>
+</section>
+<!-- end slider section -->
 
-    </section>
-    <!-- end slider section -->
   </div>
 
   <!-- offer section -->
