--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="carousel-item active">
         <div class="container ">
           <div class="row">
-            <img src="images/Frenchfriees.png" alt="">
+            <img src="images/" alt="">
             <div class="col-md-7 col-lg-6 ">
               <div class="detail-box">
                 <h1>
