changed the picture of the fries

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
             <div class="box">
               <div>
                 <div class="">
-                  <img src="images/Placeholder.png" alt="">
+                  <img src="images/frenchfries.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
