--- a/book.html
+++ b/book.html
@@ -189,22 +189,19 @@
               Contact Us
             </h4>
             <div class="contact_link_box">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  Location
+
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call +01 (800) GRILL-FUN
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  Gamedaygrill2024@gmail.com
+                  gamedaygrill@gmail.com
                 </span>
               </a>
             </div>
@@ -216,7 +213,7 @@
               Game Day Grill
             </a>
             <p>
-              Necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with
+              
             </p>
             <div class="footer_social">
               <a href="">
@@ -242,21 +239,22 @@
             Opening Hours
           </h4>
           <p>
-            Everyday
+            Monday - Friday
           </p>
           <p>
-            08.00 Am -02.00 Pm
+            8.00 Am -2.30 Pm
           </p>
         </div>
       </div>
       <div class="footer-info">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved 
+          &copy; <span id="displayYear"></span> this is a school project 
         </p>
       </div>
     </div>
   </footer>
   <!-- footer section -->
+
 
   <!-- jQery -->
   <script src="js/jquery-3.4.1.min.js"></script>
