i am lossing my mind

--- a/menu.html
+++ b/menu.html
@@ -34,6 +34,7 @@
   <link href="css/style.css" rel="stylesheet" />
   <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+  <script src="store.js"></script>
 
 </head>
 
