--- a/menu.html
+++ b/menu.html
@@ -264,8 +264,8 @@
           <div class="col-sm-6 col-lg-4 all salad">
             <div class="box">
               <div>
-                <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                <div class="images">
+                  <img src="images/Salad1.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -340,8 +340,8 @@
           <div class="col-sm-6 col-lg-4 all pasta">
             <div class="box">
               <div>
-                <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                <div class="images">
+                  <img src="images/Chicken Alfredo1.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
