--- a/menu.html
+++ b/menu.html
@@ -416,8 +416,8 @@
           <div class="col-sm-6 col-lg-4 all sides">
             <div class="box">
               <div>
-                <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                <div class="images">
+                  <img src="images/frenchfries.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -492,8 +492,8 @@
           <div class="col-sm-6 col-lg-4 all salad">
             <div class="box">
               <div>
-                <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                <div class="images">
+                  <img src="images/TacoSalad1.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
