--- a/menu.html
+++ b/menu.html
@@ -569,8 +569,8 @@
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
-                <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                <div class="images">
+                  <img src="images/PrimeRib1.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -721,8 +721,8 @@
           <div class="col-sm-6 col-lg-4 all side">
             <div class="box">
               <div>
-                <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                <div class="images">
+                  <img src="images/Coleslaw1.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
