--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
-                <div class="">
+                <div class=">
                   <img src="images/PrimeRib1.jpg" alt="">
                 </div>
                 <div class="detail-box">
