--- a/index.html
+++ b/index.html
@@ -977,54 +977,40 @@
       </div>
       <div class="carousel-wrap row">
         <div class="owl-carousel client_owl-carousel">
-          <!-- Slide 1 -->
-          <div class="item">
-            <div class="box">
-              <div class="detail-box">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam</p>
-                <h6>Moana Michell</h6>
-                <p>magna aliqua</p>
-              </div>
-              <div class="img-box">
-                <img src="images/client1.jpg" alt="" class="box-img">
-              </div>
-            </div>
-          </div>
-
-          <!-- Slide 2 -->
-          <div class="item">
-            <div class="box">
-              <div class="detail-box">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam</p>
-                <h6>Mike Hamell</h6>
-                <p>magna aliqua</p>
-              </div>
-              <div class="img-box">
-                <img src="images/client2.jpg" alt="" class="box-img">
-              </div>
-            </div>
-          </div>
-
-
-          <!-- Add another slide (Slide 3) -->
-          <div class="item">
-            <div class="box">
-              <div class="detail-box">
-                <p>New customer feedback here...</p>
-                <h6>New Customer Name</h6>
-                <p>Additional information...</p>
-              </div>
-              <div class="img-box">
-                <img src="images/client3.jpg" alt="" class="box-img">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+<!-- Slide 1 -->
+<div class="item">
+  <div class="box">
+    <div class="detail-box">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+      <h6>Moana Michell</h6>
+      <p>magna aliqua</p>
     </div>
-  </section>
+  </div>
+</div>
+
+<!-- Slide 2 -->
+<div class="item">
+  <div class="box">
+    <div class="detail-box">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+      <h6>Mike Hamell</h6>
+      <p>magna aliqua</p>
+    </div>
+  </div>
+</div>
+
+        <!-- Slide 3 -->
+<div class="item">
+  <div class="box">
+    <div class="detail-box">
+      <p>New customer feedback here...</p>
+      <h6>New Customer Name</h6>
+      <p>Additional information...</p>
+    </div>
+  </div>
+</div>
+</section>
+
   <!-- end client section -->
 
 
