--- a/menu.html
+++ b/menu.html
@@ -570,7 +570,7 @@
             <div class="box">
               <div>
                 <div class="images">
-                  <img src="images/PrimeRib1.jpg" alt="">
+                  <img src="images/PrimeRib1_500x286.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -645,8 +645,8 @@
           <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
-                <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                <div class="">
+                  <img src="images/Pulled_pork_sandwhich_1_500x286.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
