--- a/menu.html
+++ b/menu.html
@@ -133,6 +133,10 @@
         <li data-filter=".salad">Salad</li>
         <li data-filter=".pasta">Pasta</li>
         <li data-filter=".sides">Sides</li>
+        <li data-filter=".Steaks">Steaks</li>
+        <li data-filter=".dessert">dessert</li>
+        <li data-filter=".appetizers">appetizers</li>
+
       </ul>
 
       <div class="filters-content">
