--- a/menu.html
+++ b/menu.html
@@ -127,15 +127,15 @@
         </h2>
       </div>
 
-      <ul class="filters_menu">
-        <li class="active" data-filter="*">All</li>
-        <li data-filter=".burger">Burger</li>
-        <li data-filter=".salad">Salad</li>
-        <li data-filter=".pasta">Pasta</li>
-        <li data-filter=".sides">Sides</li>
-        <li data-filter=".Steaks">Steaks</li>
-        <li data-filter=".dessert">dessert</li>
+      <ul class="filters_menu"> 
+         <li class="active" data-filter="*">All</li>
         <li data-filter=".appetizers">appetizers</li>
+        <li data-filter=".Steaks">Steaks</li>
+        <li data-filter=".burger">Burger</li>
+       <li data-filter=".pasta">Pasta</li>
+        <li data-filter=".salad">Salad</li>        
+        <li data-filter=".sides">Sides</li>
+        <li data-filter=".dessert">Dessert</li>
 
       </ul>
 
